# HMath

./: .gitignore  CMakeLists.txt  CMakeSettings.json  HMath.sln  HMath.vcxproj  HMath.vcxproj.filters  HMathTest.vcxproj  README.md
examples/: CMakeLists.txt  ImageUtilsExample.cpp  delaunay2dExample.cpp  erosionExample.cpp
include/: HMath.h
include/Math/: Array2D.h  Array3D.h  Epsilon.h  HAccelerate  HGeometry  HGraphicUtils  HSolver  HashGrid.h  HashTable.h  HasherFunction.h  LevelSet2D.h  LevelSet3D.h  Math.h  MathUtils.h  ObjectPool.h  Parallel.h
include/Math/Accelerate/: AccelerateCommon.h  Accelerator.h  TreeUtils.h
include/Math/Core/: Allocator.h  FileSystem.h  LogUtils.h  Random.h
include/Math/Geometry/: Geometry.h  Intersection.h  Orientaion.h  Voronoi2D.h  VoronoiDiagram.h
include/Math/Geometry/Triangulate/: Delaunay2D.h  Delaunay3D.h  EarClip2D.h  earcut.hpp
include/Math/GraphicUtils/: Camara.h  CameraManager.h  FrameProfiler.h  Frustum.h  HalfEdgeMesh.h  MeshCommon.h  MeshData.h  PerlinNoise.h  TriangleMesh.h
include/Math/GraphicUtils/Noise/: PerlinNoise.h  SImplexNoise.h
include/Math/Mesh/: HalfEdgeMesh.h
include/Math/Procedural/: Erosion.h  HydraulicErosion.h  WindErosion.h
include/Math/Solver/: ConjugateGradientSolver.h  DiagonalPreconditioner.h  SimpleSolver.h  SolverCommon.h
include/Math/Visual/: ImageUtils.h
include/Utils/: HashUtils.h
src/: HMath.cpp  MathLibUnitTests.h  TestEarClip.h  TestHashGirid.h  TestImageUtils.h  TestIntersect.h  TestNoise.h  TestOrientation.h  TestPerlinNoise.h  TestProcedural.h  TestTriangleMesh.h  main.cpp
src/Core/: Mat44.cpp  Quat.cpp  Transform.cpp  Vector2.cpp
src/Utils/: CompareUtils.h  TransformUtils.h
src/Vertor/: Vector2.cpp  Vector3.cpp  Vector4.cpp
